--- a/source/styles/sections/fifteenth.scss
+++ b/source/styles/sections/fifteenth.scss
@@ -15,6 +15,10 @@
         background-color: #bf1e2e;
         transform: rotate(-45deg);
         box-shadow: 0px 0px 9.1px 3.9px rgba(0, 0, 0, 0.2);
+
+        @media (max-width: 1599px) {
+            left: -316px;
+        }
     }
 
     &__outer {
@@ -38,6 +42,16 @@
         letter-spacing: -0.7px;
         text-transform: uppercase;
         margin: 0 0 124px;
+
+        @media (max-width: 1919px) {
+            margin: 0 0 20px;
+        }
+
+        @media (max-width: 1599px) {
+            padding: 4vw 0 0 50px;
+            font-size: 32px;
+            margin: 0 0 3vw;
+        }
     }
 
     &__title--red {
@@ -65,6 +79,15 @@
         box-shadow: 0px 2px 9.5px 0.5px rgba(0, 0, 0, 0.25);
         margin: 0 auto;
 
+        @media (max-width: 1919px) {
+            height: 545px;
+        }
+
+        @media (max-width: 1599px) {
+            width: 800px;
+            height: 400px;
+        }
+
         form {
             width: 100%;
             height: 100%;
@@ -85,6 +108,14 @@
         border-style: solid;
         border-radius: 3px;
         opacity: 0.902;
+
+        @media (max-width: 1919px) {
+            padding: 30px 0 0;
+        }
+
+        @media (max-width: 1599px) {
+            padding: 10px 0 0;
+        }
     }
 
     &__form-title {
@@ -94,6 +125,11 @@
         letter-spacing: -0.5px;
         color: #000;
         margin: 0 auto 28px;
+
+        @media (max-width: 1599px) {
+            font-size: 20px;
+            margin: 0 auto 10px;
+        }
     }
 
     &__form-inputs {
@@ -105,14 +141,42 @@
         text-align: center;
         margin: 0 auto 7px;
 
+        @media (max-width: 1599px) {
+            width: 90%;
+        }
+    }
+
+    &__form-input {
+        display: inline-block;
+        vertical-align: top;
+        width: 365px;
+        margin: 30px 0 31px;
+
         input {
-            width: 365px;
+            width: 100%;
             height: 33px;
             font-family: "Jura-DemiBold";
             font-size: 20px;
             border: none;
             border-bottom: 2px solid #818181;
-            margin: 30px 0 31px;
+        }
+
+        @media (max-width: 1599px) {
+            width: 320px;
+            margin: 10px 0;
+        }
+
+        &.is-necessarily {
+            position: relative;
+
+            &:after {
+                content: '*';
+                position: absolute;
+                top: 0;
+                right: 15px;
+                font-size: 30px;
+                color: #bf1e2e;
+            }
         }
     }
 
@@ -121,6 +185,10 @@
         font-size: 15px;
         color: #000;
         margin: 0 0 22px;
+
+        @media (max-width: 1599px) {
+            font-size: 13px;
+        }
 
         span {
             color: #bf1e2e;
@@ -149,6 +217,10 @@
         left: 0;
         width: 100%;
         height: 107px;
+
+        @media (max-width: 1599px) {
+            height: 70px;
+        }
         
         .container {
             display: flex;
@@ -175,6 +247,11 @@
             text-decoration: none;
             margin: 0 0 0 20px;
         }
+
+        @media (max-width: 1599px) {
+            padding: 0;
+            font-size: 16px;
+        }
     }
 
     &__footer-phone_icon {
@@ -188,6 +265,10 @@
         transform: rotate(45deg);
         margin: 9px 0 0;
 
+        @media (max-width: 1599px) {
+            margin: 5px 0 0;
+        }
+
         img {
             transform: rotate(-45deg);
         }
@@ -197,12 +278,21 @@
         padding: 27px 0 0;
         font-size: 18px;
         letter-spacing: -0.6px;
+
+        @media (max-width: 1599px) {
+            padding: 13px 0 0;
+            font-size: 13px;
+        }
     }
 
     &__footer-logo {
 
         img {
             width: 260px;
+
+            @media (max-width: 1599px) {
+                width: 150px;
+            }
         }
     }
 
@@ -210,11 +300,21 @@
         padding: 25px 0 0;
         font-size: 20px;
         letter-spacing: -0.6px;
+
+        @media (max-width: 1599px) {
+            padding: 12px 0 0;
+            font-size: 14px;
+        }
     }
 
     &__footer-copy {
         padding: 30px 0 0;
         font-size: 15px;
         letter-spacing: -0.6px;
+
+        @media (max-width: 1599px) {
+            padding: 13px 0 0;
+            font-size: 13px;
+        }
     }
 }
