--- a/source/styles/sections/fourth.scss
+++ b/source/styles/sections/fourth.scss
@@ -14,6 +14,10 @@
         background-color: #bf1e2e;
         transform: rotate(-45deg);
         box-shadow: 0px 0px 9.1px 3.9px rgba(0, 0, 0, 0.2);
+
+        @media (max-width: 1599px) {
+            right: -331px;
+        }
     }
 
     &:after {
@@ -26,6 +30,10 @@
         background-color: #bf1e2e;
         transform: rotate(-45deg);
         box-shadow: 0px 0px 9.1px 3.9px rgba(0, 0, 0, 0.2);
+
+        @media (max-width: 1599px) {
+            left: -316px;
+        }
     }
 
     &__bg {
@@ -64,6 +72,10 @@
         width: 100%;
         height: 100%;
         padding: 110px 0 0;
+
+        @media (max-width: 1919px) {
+            padding: 70px 0 0;
+        }
     }
 
     &__title {
@@ -76,6 +88,15 @@
         line-height: 1.2;
         text-align: center;
         margin: 0 0 106px;
+
+        @media (max-width: 1919px) {
+            margin: 0 0 60px;
+        }
+
+        @media (max-width: 1599px) {
+            font-size: 32px;
+            margin: 0 0 20px;
+        }
 
         span {
             padding: 0 10px 0 0;
@@ -103,6 +124,10 @@
         line-height: 1;
         color: #bf1e2e;
 
+        @media (max-width: 1599px) {
+            font-size: 240px;
+        }
+
         &:after {
             content: '';
             position: absolute;
@@ -119,6 +144,10 @@
         font-size: 25px;
         opacity: 0.99;
         margin: -47px 0 11px;
+
+        @media (max-width: 1599px) {
+            font-size: 20px;
+        }
     }
 
     &__item-text {
@@ -131,6 +160,11 @@
         font-family: "Jura-DemiBold";
         font-size: 18px;
         border: 1px dashed #6a6a6a;
+
+        @media (max-width: 1599px) {
+            height: 200px;
+            font-size: 16px;
+        }
 
         p {
             margin: 0;
