--- a/source/styles/sections/ninth.scss
+++ b/source/styles/sections/ninth.scss
@@ -15,6 +15,10 @@
         background-color: #bf1e2e;
         transform: rotate(-45deg);
         box-shadow: 0px 0px 9.1px 3.9px rgba(0, 0, 0, 0.2);
+
+        @media (max-width: 1599px) {
+            right: -331px;
+        }
     }
 
     &:after {
@@ -27,6 +31,10 @@
         background-color: #bf1e2e;
         transform: rotate(-45deg);
         box-shadow: 0px 0px 9.1px 3.9px rgba(0, 0, 0, 0.2);
+
+        @media (max-width: 1599px) {
+            left: -316px;
+        }
     }
 
     &__outer {
@@ -45,20 +53,46 @@
         align-items: flex-start;
         width: 83.33%;
         padding: 208px 0 0;
+
+        @media (max-width: 1919px) {
+            padding: 150px 0 0;
+            margin: 0 0 0 150px;
+        }
+
+        @media (max-width: 1599px) {
+            padding: 112px 0 0;
+            margin: 0 0 0 8vw;
+        }
     }
     
     &__item {
         width: 490px;
         margin: 0 0 0 8px;
 
+        @media (max-width: 1599px) {
+            width: 370px;
+        }
+
         &:first-child {
             margin: 0 225px 0 8px;
+
+            @media (max-width: 1919px) {
+                margin: 0 100px 0 8px;
+            }
+
+            @media (max-width: 1599px) {
+                margin: 0 70px 0 8px;
+            }
         }
 
         &--red {
             .ninth__item-title {
                 padding: 0 106px 20px 0;
                 color: #bf1e2e;
+
+                @media (max-width: 1599px) {
+                    padding: 0 50px 20px 0;
+                }
 
                 span {
                     border-color: #bf1e2e;
@@ -101,6 +135,10 @@
             text-align-last: left;
             border-bottom: 1px solid #fff;
         }
+
+        @media (max-width: 1599px) {
+            font-size: 24px;
+        }
     }
 
     &__item-text {
@@ -108,12 +146,16 @@
         padding: 59px 23px 59px 29px;
         font-family: "Jura-DemiBold";
         font-size: 20px;
-        line-height: 30px;
+        line-height: 1.5;
         letter-spacing: -0.3px;
         text-shadow: 0px 1px 17.1px rgba(0, 0, 0, 0.63);
         color: #fefefe;
         border-radius: 3px;
         border: 1px dashed rgba(#fff, 0.2);
+
+        @media (max-width: 1599px) {
+            font-size: 16px;
+        }
     }
 
     &__item-icon {
