--- a/source/styles/sections/sixth.scss
+++ b/source/styles/sections/sixth.scss
@@ -15,6 +15,10 @@
         background-color: #bf1e2e;
         transform: rotate(-45deg);
         box-shadow: 0px 0px 9.1px 3.9px rgba(0, 0, 0, 0.2);
+
+        @media (max-width: 1599px) {
+            right: -331px;
+        }
     }
 
     &:after {
@@ -27,6 +31,10 @@
         background-color: #bf1e2e;
         transform: rotate(-45deg);
         box-shadow: 0px 0px 9.1px 3.9px rgba(0, 0, 0, 0.2);
+
+        @media (max-width: 1599px) {
+            left: -316px;
+        }
     }
 
     &__outer {
@@ -41,6 +49,10 @@
     &__inner {
         width: 91.667%;
         padding: 101px 0 0;
+
+        @media (max-width: 1919px) {
+            padding: 40px 0 0;
+        }
     }
 
     &__title {
@@ -63,24 +75,60 @@
             line-height: 35px;
             color: #000;
         }
+
+        @media (max-width: 1919px) {
+            margin: 0 0 30px;
+        }
+
+        @media (max-width: 1599px) {
+            font-size: 32px;
+            line-height: 45px;
+
+            span {
+                font-size: 22px;
+                line-height: 27px;
+            }
+        }
     }
 
     &__content {
         display: flex;
         justify-content: space-between;
         align-items: flex-start;
+
+        @media (max-width: 1599px) {
+            padding: 0 7vw 0 0;
+        }
     }
 
     &__col-one {
         padding: 46px 0 0 5px;
+
+        @media (max-width: 1919px) {
+            padding: 100px 0 0 5px;
+        }
+
+        @media (max-width: 1919px) {
+            padding: 50px 0 0 10px;
+        }
     }
 
     &__col-too {
-
+        @media (max-width: 1599px) {
+            margin: 55px 0 0;
+        }
     }
 
     &__col-three {
         margin: 125px 0 0;
+
+        @media (max-width: 1919px) {
+            margin: 65px 20px 0 -20px;
+        }
+
+        @media (max-width: 1599px) {
+            margin: 0;
+        }
     }
 
     &__item {
@@ -88,12 +136,29 @@
         justify-content: flex-start;
         align-items: flex-start;
         margin: 0 0 44px;
+
+        @media (max-width: 1919px) {
+            margin: 0 0 30px;
+        }
+
+        @media (max-width: 1599px) {
+            margin: 0 0 10px;
+        }
     }
 
     &__item-image {
         display: inline-block;
         vertical-align: top;
         min-width: 269px;
+
+        @media (max-width: 1599px) {
+            min-width: 175px;
+
+            img {
+                transform: scale(0.6);
+                transform-origin: 0% 50%;
+            }
+        }
     }
 
     &__item-content {
@@ -113,12 +178,25 @@
             font-size: 20px;
             font-weight: bold;
         }
+
+        @media (max-width: 1599px) {
+            font-size: 18px;
+
+            b {
+                font-size: 14px;
+            }
+        }
     }
 
     &__item-text {
         padding: 0 0 0 27px;
         font-family: "Jura-DemiBold";
         font-size: 15px;
+
+        @media (max-width: 1599px) {
+            padding: 0 0 0 15px;
+            font-size: 13px;
+        }
     }
 }
 
@@ -137,22 +215,22 @@
         letter-spacing: -0.8px;
         border-bottom: 2px solid #fff;
     }
-
+    
     &__list {
         padding: 20px 0 0 20px;
         font-family: "Jura-DemiBold";
         font-size: 16px;
         border-bottom: 2px solid #da4453;
         margin: 0 0 30px;
-
+        
         input {
             display: none;
-
+            
             &:checked + label:after {
                 background-color: #000;
             }
         }
-
+        
         label {
             position: relative;
             display: block;
@@ -203,6 +281,25 @@
 
         span {
             font-size: 20px;
+        }
+    }
+
+    @media (max-width: 1599px) {
+        width: 280px;
+        padding: 22px 20px;
+
+        &__title {
+            font-size: 20px;
+        }
+
+        &__result-title,
+        &__result-month,
+        &__result-year {
+            font-size: 14px;
+
+            span {
+                font-size: 17px;
+            }
         }
     }
 }
