--- a/source/styles/sections/third.scss
+++ b/source/styles/sections/third.scss
@@ -15,6 +15,10 @@
         background-color: #bf1e2e;
         transform: rotate(45deg);
         box-shadow: 0px 0px 9.1px 3.9px rgba(0, 0, 0, 0.2);
+
+        @media (max-width: 1599px) {
+            right: -331px;
+        }
     }
 
     &:after {
@@ -27,6 +31,10 @@
         background-color: #bf1e2e;
         transform: rotate(45deg);
         box-shadow: 0px 0px 9.1px 3.9px rgba(0, 0, 0, 0.2);
+
+        @media (max-width: 1599px) {
+            left: -316px;
+        }
     }
 
     &__wrapper {
@@ -36,6 +44,10 @@
         width: 100%;
         height: 100%;
         padding: 111px 0 0;
+
+        @media (max-width: 1919px) {
+            padding: 60px 0 0;
+        }
 
         .container {
             text-align: left;
@@ -53,6 +65,15 @@
         text-align: center;
         margin: 0 0 119px;
 
+        @media (max-width: 1919px) {
+            margin: 0 0 70px;
+        }
+
+        @media (max-width: 1599px) {
+            font-size: 32px;
+            margin: 0 0 30px;
+        }
+
         span {
             padding: 0 10px 0 0;
             color: #000;
@@ -64,6 +85,12 @@
         width: 83.33%;
         height: 465px;
         overflow: hidden;
+
+        @media (max-width: 1919px) {
+            width: 75%;
+            height: 500px;
+            margin: 0 0 0 8.33%;
+        }
     }
 
     &__content-decor {
@@ -120,6 +147,10 @@
             position: absolute;
             top: calc(50% - 15px);
 
+            @media (max-width: 1599px) {
+                top: calc(50% - 25px);
+            }
+
             &:first-child {
                 left: 20%;
             }
@@ -149,6 +180,10 @@
         width: 20%;
         padding: 29px 15px 121px;
         text-align: center;
+
+        @media (max-width: 1599px) {
+            padding: 29px 15px 50px;
+        }
     }
 
     &__item-img {
