--- a/source/styles/sections/thirteenth.scss
+++ b/source/styles/sections/thirteenth.scss
@@ -15,6 +15,10 @@
         background-color: #bf1e2e;
         transform: rotate(-45deg);
         box-shadow: 0px 0px 9.1px 3.9px rgba(0, 0, 0, 0.2);
+
+        @media (max-width: 1599px) {
+            right: -331px;
+        }
     }
 
     &:after {
@@ -27,6 +31,10 @@
         background-color: #bf1e2e;
         transform: rotate(-45deg);
         box-shadow: 0px 0px 9.1px 3.9px rgba(0, 0, 0, 0.2);
+
+        @media (max-width: 1599px) {
+            left: -316px;
+        }
     }
 
     &__outer {
@@ -51,6 +59,16 @@
         letter-spacing: -0.7px;
         text-transform: uppercase;
         margin: 0 0 39px;
+
+        @media (max-width: 1919px) {
+            padding: 60px 113px 0 0;
+        }
+
+        @media (max-width: 1599px) {
+            padding: 40px 113px 0 0;
+            font-size: 32px;
+            margin: 0 0 2vw;
+        }
     }
 
     &__title--red {
@@ -64,10 +82,6 @@
         text-align: center;
     }
 
-    &__content {
-
-    }
-
     &__player {
         display: flex;
         justify-content: space-between;
@@ -77,6 +91,11 @@
         .video {
             width: 572px;
             height: 318px;
+
+            @media (max-width: 1599px) {
+                width: 400px;
+                height: 222px;
+            }
         }
     }
 
@@ -89,6 +108,14 @@
             display: block;
             font-family: "RoadRadio-Bold";
             font-size: 22px;
+        }
+
+        @media (max-width: 1599px) {
+            font-size: 19px;
+
+            span {
+                font-size: 15px;
+            }
         }
     }
     
@@ -124,6 +151,10 @@
         font-family: "RoadRadio";
         font-size: 18px;
 
+        @media (max-width: 1599px) {
+            font-size: 16px;
+        }
+
         .icon {
             margin: 0 3px 0 0;
         }
@@ -134,13 +165,26 @@
         justify-content: space-between;
         align-items: flex-start;
 
+        @media (max-width: 1599px) {
+            margin: 0 0 2vw;
+        }
+
         .twelfth__item {
             position: relative;
             color: #000;
 
+            @media (max-width: 1919px) {
+                margin: 0 0 20px;
+            }
+
             img {
                 width: 356px;
                 height: 236px;
+
+                @media (max-width: 1599px) {
+                    width: 270px;
+                    height: 179px;
+                }
             }
 
             &:after {
@@ -153,10 +197,6 @@
                 @include sprite($play-big);
             }
         }
-    }
-
-    &__button {
-
     }
 }
 
@@ -229,8 +269,8 @@
     &__btn {
         position: relative;
         display: block;
-        width: 116px;
-        height: 116px;
+        width: 70px;
+        height: 70px;
         border-radius: 50%;
         transition: background 0.5s;
         margin: 0 auto 25px;
