--- a/source/template/sections/form_one.pug
+++ b/source/template/sections/form_one.pug
@@ -14,7 +14,7 @@ div.form_one
                 input(type="text" id="popup1-name" placeholder="Ваше имя")
                 input(type="text" id="popup1-phone" placeholder="Ваш телефон")
                 input(type="email" id="popup1-email" placeholder="Email")
-                button.button--red
+                button(id="popup__submited-button").button--red
                     span Получить доступ
             .popup__note
                 | Ваши данные не будут переданы третьим лицам 
