--- a/source/styles/global/base.scss
+++ b/source/styles/global/base.scss
@@ -35,18 +35,8 @@ ol {
 
 .container {
   width: 100%;
-  max-width: 1560px;
-  padding: 0 15px;
+  padding: 0 4.6875%;
   margin: 0 auto;
-}
-
-.is-hidden {
-  display: none !important;
-}
-
-.visually-hidden {
-  text-indent: -9999px;
-  font-size: 0;
 }
 
 button.button--red {
