--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -4,27 +4,28 @@ html(lang='ru')
         meta(charset='UTF-8')
         meta(http-equiv='X-UA-Compatible', content="IE=edge")
         meta(name='viewport' content='width=device-width')
-        link(rel="stylesheet" href="css/main.min.css")
+        link(rel="stylesheet"  media="(min-width: 768px)" href="css/main.min.css")
+        link(rel="stylesheet"  media="(min-width: 1200px)" href="images/main.min.css")
         title CyberX
     body
         include sections/first
-        include sections/form_one
-        include sections/second
-        include sections/third
-        include sections/fourth
-        include sections/fifth
-        include sections/form_too
-        include sections/sixth
-        include sections/eighth
-        include sections/ninth
-        include sections/tenth
-        include sections/eleventh
-        include sections/twelfth
-        include sections/thirteenth
-        include sections/fourteenth
-        include sections/fifteenth
+        //- include sections/form_one
+        //- include sections/second
+        //- include sections/third
+        //- include sections/fourth
+        //- include sections/fifth
+        //- include sections/form_too
+        //- include sections/sixth
+        //- include sections/eighth
+        //- include sections/ninth
+        //- include sections/tenth
+        //- include sections/eleventh
+        //- include sections/twelfth
+        //- include sections/thirteenth
+        //- include sections/fourteenth
+        //- include sections/fifteenth
 
-        script(src="/js/main.js")
+        //- script(src="/js/main.js")
         
         
         
