--- a/source/template/sections/eighth.pug
+++ b/source/template/sections/eighth.pug
@@ -1,4 +1,4 @@
-section.eighth
+section.eighth.is-decor--top-right.is-decor--bottom-left
     .eighth__outer
         .container
             .eighth__inner
