--- a/source/template/sections/eleventh.pug
+++ b/source/template/sections/eleventh.pug
@@ -1,4 +1,4 @@
-section.eleventh
+section.eleventh.is-decor--top-left.is-decor--bottom-right
     .eleventh__outer
         .container
             .eleventh__inner
