--- a/source/template/sections/fifth.pug
+++ b/source/template/sections/fifth.pug
@@ -1,4 +1,4 @@
-section.fifth
+section.fifth.is-decor--top-right.is-decor--bottom-left
     .fifth__outer
         .container
             .fifth__inner
