--- a/source/template/sections/fourteenth.pug
+++ b/source/template/sections/fourteenth.pug
@@ -1,4 +1,4 @@
-section.fourteenth
+section.fourteenth.is-decor--top-right.is-decor--bottom-left
     .fourteenth__outer
         .container
             .fourteenth__title
