--- a/source/template/sections/fourth.pug
+++ b/source/template/sections/fourth.pug
@@ -1,4 +1,4 @@
-section.fourth
+section.fourth.is-decor--top-left.is-decor--bottom-right
     .fourth__bg
         .fourth__bg-first
         .fourth__bg-second
