--- a/source/template/sections/ninth.pug
+++ b/source/template/sections/ninth.pug
@@ -1,4 +1,4 @@
-section.ninth
+section.ninth.is-decor--top-left.is-decor--bottom-right
     .ninth__outer
         .container
             .ninth__inner
