--- a/source/template/sections/second.pug
+++ b/source/template/sections/second.pug
@@ -1,5 +1,4 @@
-section.second
-    .second__outer
+section.second.is-decor--top-right.is-decor--bottom-right
     .second__inner
         .container
             .second__logo
