--- a/source/template/sections/sixth.pug
+++ b/source/template/sections/sixth.pug
@@ -1,4 +1,4 @@
-section.sixth
+section.sixth.is-decor--top-left.is-decor--bottom-right
     .sixth__outer
         .container
             .sixth__inner
