--- a/source/template/sections/tenth.pug
+++ b/source/template/sections/tenth.pug
@@ -1,4 +1,4 @@
-section.tenth
+section.tenth.is-decor--top-right.is-decor--bottom-left
     .tenth__outer
         .container
             .tenth__title
