--- a/source/template/sections/third.pug
+++ b/source/template/sections/third.pug
@@ -1,4 +1,4 @@
-section.third
+section.third.is-decor--top-right.is-decor--bottom-left
     .third__wrapper
         .container
             .third__title
