--- a/source/template/sections/thirteenth.pug
+++ b/source/template/sections/thirteenth.pug
@@ -1,4 +1,4 @@
-section.thirteenth
+section.thirteenth.is-decor--top-left.is-decor--bottom-right
     .thirteenth__outer
         .container
             .thirteenth__title
