--- a/source/template/sections/twelfth.pug
+++ b/source/template/sections/twelfth.pug
@@ -1,4 +1,4 @@
-section.twelfth
+section.twelfth.is-decor--top-right.is-decor--bottom-left
     .twelfth__outer
         .container
             .twelfth__inner
