--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -5,6 +5,7 @@
 @import "global/base";
 @import "global/icons";
 @import "global/sprite";
+@import "global/decor";
 
 @import "sections/first";
 @import "sections/form_one";
